style/board_overlay_style.css
.overlay{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 999;

    display: flex;
    justify-content: center;
    align-items: center;

    visibility: hidden;
    opacity: 0;
}

.overlay.show {
    visibility: visible;
    opacity: 1;
    transition-delay: 0s;
}

.overlay_content {
    padding: 48px 40px;
    box-sizing: border-box;
    opacity: 0;
    transform: translateX(200%);
    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;

    width: 520px;
    /* min-height: 600px; */
    height: 900px;
    background-color: white;
    border-radius: 30px;
    z-index: 1000;

    font-family: "Inter_Bold";

    display: flex;
    gap: 24px;
    flex-direction: column;
}

.overlay_content.show {
    opacity: 1;
    transform: translateX(0);
}

.overlay_content .overlay_header{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.overlay_content .overlay_header .category_overlay {
    font-size: 23px;
    font-weight: 400;
    color: white;
    font-family: "Inter";
    padding: 4px 24px;
    border-radius: 8px;
}

.overlay_content .overlay_header .close_overlay_button{
    background-color: transparent;
    border: none;
    cursor: pointer;
    display: flex;
    padding: 5px;
    width: 24px;
    height: 24px;
    border-radius: 12px;
}

.overlay_content .overlay_header .close_overlay_button:hover{
    background-color: #E7E7E7;
}

.overlay_content p{
    font-size: 20px;
    font-weight: 400;
    font-family: "Inter";
}

.overlay_content .overlay_main_content .required-info{
    font-size: 16px;
    font-weight: 400;
}

.overlay_content .technical_task{
    background-color: #0038FF;
}

.overlay_content .user_story{
    background-color: #1FD7C1;
}

.overlay_main_content{
    display: flex;
    gap: 8px;
    flex-direction: column;
}

.overlay_content .show_separator{
    flex-direction: row;
}

.overlay_content.add_task_attributes{
    width: 80%;
    padding: 64px 5%;
}

.overlay_main_content .task_details_container{
    display: flex;
    flex-direction: column;
    gap: 16px;
    flex: 1;
    font-family: "Inter";
}

.overlay_main_content .due_date_info .attribute,
.overlay_main_content .priority_info .attribute,
.overlay_main_content .assigned_users_info .attribute,
.overlay_main_content .subtasks_info .attribute {
    color: #42526E;
    width: 120px;
}

.overlay_main_content .due_date_info,
.overlay_main_content .priority_info{
    display: flex;
}

.overlay_content .edit_overlay_button_container{
    display: flex;
    justify-content: space-between;
    gap: 20px;
}

.overlay_content .edit_overlay_button_container .edit_overlay_button{
    display: flex;
    gap: 8px;
    padding: 0px 8px;
    cursor: pointer;
    color:#2A3647;
    background-color: transparent;
    border: none;
}

.overlay_content .edit_overlay_button_container{
    width: 100%;
    display: flex;
    justify-content: flex-end;
    gap:8px
}

.overlay_content .edit_overlay_button_container .separator_overlay{
    border-right: 1px solid #A8A8A8;
}

.overlay_content .edit_overlay_button_container .edit_overlay_button p{
    font-size: 16px;
    font-weight: 400;
}

.overlay_main_content .priority_info .priority_content{
    display: flex;
    align-items: center;
    gap: 10px;
}

.overlay_main_content .priority_info .priority_content .priority_indicator{
    display: flex;
}

.overlay_main_content .assigned_users_info .assigned_users{
    margin-top: 8px
}

.overlay_main_content .assigned_users_info .assigned_users .assigned_user_content{
    display: flex;
    gap: 16px;
    align-items: center;
    padding: 7px 16px;
}

.overlay_main_content .subtasks_info .subtasks_list{
    margin-top: 8px;
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.overlay_main_content .subtasks_info .subtasks_list .subtask_list_item{
    display: flex;
    align-items: center;
    gap: 20px;
    padding: 6px 16px;
}

.overlay_main_content .subtasks_info .subtasks_list .subtask_list_item p{
    font-size: 16px;
    font-weight: 400;
}

.overlay_main_content .subtasks_info .subtasks_list .subtask_list_item .subtask_checkbox_custom{
    width:20px;
    height:20px;
    border:unset;
    background-color: transparent;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
}

.overlay_content .upsert_overlay_footer{
    justify-content: flex-end;
}

.overlay_content .task_field_title{
    font-family: "Inter";
    font-size: 20px;
    color: #2A3647;
}

.overlay_content .upsert_description_container form.input-form.description{
    flex: unset;
  
}

.overlay_content .upsert_description_container form textarea{
    height: calc( 120px - 24px );
    line-height: 120%;
    font-size: 20px;
    font-family: "Inter";
}

.overlay_content .overlay_main_content{
    flex-grow: 1;
    overflow-y: auto;
}

.overlay_content .upsert_subtasks_container .subtasks_upsert_list{
    margin-top: 16px;
    display: flex;
    flex-direction: column;
    gap: 16px;
    padding-left: 0px;
}

.overlay_header h1{
    visibility: hidden;
    opacity: 0;
    height: 24px;
    font-weight: 700;
}

.overlay_header h1.show{
    visibility: visible;
    opacity: 1;
    transition-delay: 0s;
    height: auto;
}

.overlay_content .upsert_category_container{
    visibility: hidden;
    opacity: 0;
    height: 0;
    min-height: 0;
    max-height: 0;
    padding: 0;
    margin: 0;
    overflow: hidden;
    pointer-events: none;
    display: none;
}

.overlay_content .upsert_category_container.show{
    visibility: visible;
    opacity: 1;
    transition-delay: 0s;
    height: unset;
    min-height: unset;
    max-height: unset;
    padding: unset;
    margin: unset;
    overflow: unset;
    pointer-events: unset;
    display: unset;
}

.overlay_separator_add_task{
    width: 1px;
    background-color: #D1D1D1;
    margin: 0px 5%;
    visibility: hidden;
}

.overlay_separator_add_task.show{
    visibility: visible;
    opacity: 1;
    transition-delay: 0s;
}

.overlay_content .action-button-section{
    margin-top: 12px;
}

.overlay_content .action-button-section .required-text{
    font-size: 16px;
}
.overlay_content .action-button-section .button-section .clear-button{
    visibility: hidden;
}

.overlay_content .action-button-section .required-text.show,
.overlay_content .action-button-section .button-section .clear-button.show{
    visibility: visible;
}

.overlay_content footer .required-field-section{
    display: flex;
    align-items: flex-end;
}

